--- a/.htaccess
+++ b/.htaccess
@@ -122,6 +122,6 @@ RewriteRule ^csp-report$ csp-report.php [L]
 ############################################################
 
 FallbackResource /index.html
-ErrorDocument 403 /error403.html
-ErrorDocument 404 /error404.html
-ErrorDocument 500 /error500.html
+ErrorDocument 403 /errors/error403.html
+ErrorDocument 404 /errors/error404.html
+ErrorDocument 500 /errors/error500.html
