--- a/app/open-utils/server/.htaccess
+++ b/app/open-utils/server/.htaccess
@@ -104,7 +104,7 @@ FileETag None
     Header always set Cross-Origin-Opener-Policy "same-origin"
 
     # CSP
-    Header always set Content-Security-Policy "default-src 'self'; script-src 'self' https://www.googletagmanager.com https://www.clarity.ms https://mc.yandex.ru; style-src 'self'; connect-src 'self' https://www.googletagmanager.com https://www.clarity.ms https://mc.yandex.ru; img-src 'self' https://sandokanCat.github.io data:; font-src 'self'; frame-src 'self'; object-src 'none'; base-uri 'self'; form-action 'self'; report-to csp-endpoint"
+    Header always set Content-Security-Policy "default-src 'self'; script-src 'self' https://open-utils-dev-sandokan-cat.vercel.app https://www.googletagmanager.com https://www.google-analytics.com https://www.clarity.ms; style-src 'self' 'unsafe-inline' https://open-utils-dev-sandokan-cat.vercel.app; connect-src 'self' https://www.google-analytics.com https://region1.analytics.google.com https://www.clarity.ms; img-src 'self' https://sandokanCat.github.io data:; font-src 'self'; frame-src 'self'; object-src 'none'; base-uri 'self'; form-action 'self'; report-uri https://sandokan.cat/csp-report; report-to csp-endpoint"
     Header always set Report-To '{"group":"csp-endpoint","max_age":10886400,"endpoints":[{"url":"https://sandokan.cat/csp-report"}],"include_subdomains":true}'
 </IfModule>
 
@@ -122,7 +122,6 @@ RewriteRule ^csp-report$ csp-report.php [L]
 ############################################################
 
 FallbackResource /index.html
-ErrorDocument 400 /private/errors/400.html
-ErrorDocument 403 /private/errors/403.html
-ErrorDocument 404 /private/errors/404.html
-ErrorDocument 500 /private/errors/500.html
+ErrorDocument 404 /error404.html
+ErrorDocument 403 /error403.html
+ErrorDocument 500 /error500.html
