--- a/config.ini
+++ b/config.ini
@@ -1,2 +1,69 @@
+[brand]
+
+    url = "https://sandokan.cat/"
+    email = "dev@sandokan.cat"
+    nick = "sandokan.cat"
+    user = "sandokanCat"
+    name = "Gonzalo Cabezas Núñez"
+    region = "ES-B"
+    city = "Barcelona"
+    postal = "08014"
+
+[lang]
+
+    op[ca_ES] = "Català"
+    op[es_ES] = "Español"
+    op[en_GB] = "English"
+    op[ru_RU] = "Русский"
+    op[ar_SA] = "العربية"
+
+    inCase = "en-GB"
+
+    rtl[] = "ar"
+    rtl[] = "he"
+    rtl[] = "fa"
+    rtl[] = "ur"
+    rtl[] = "ps"
+    rtl[] = "sd"
+    rtl[] = "ug"
+    rtl[] = "yi"
+    rtl[] = "dv"
+    rtl[] = "ku"
+    rtl[] = "syr"
+    rtl[] = "bal"
+    rtl[] = "nqo"
+
 [path]
 
+    open_utils = "https://open-utils-dev-sandokan-cat.vercel.app"
+
+    social[github] = "https://github.com/sandokanCat"
+    social[vercel] = "https://vercel.com/sandokancat"
+    social[linkedin] = "https://linkedin.com/in/sandokanCat"
+    social[infojobs] = "https://infojobs.net/candidate/cv/view/index.xhtml?dgv=3099151168547844805"
+
+    cookies = "https://wikipedia.org/"
+
+[knows]
+
+    know[] = "XML"
+    know[] = "HTML5"
+    know[] = "CSS3"
+    know[] = "Vanilla JavaScript"
+    know[] = "JSON"
+    know[] = "AJAX"
+    know[] = "PHP"
+    know[] = "MySQL"
+    know[] = "Java"
+
+[academy]
+
+    name = "Institució Pau Casals"
+    url = "https://paucasals.com"
+    logo = "https://www.paucasals.com/imagen/logo_640.png"
+
+[agent]
+
+    google = "09e253fadebfd609"
+    bing = "67F856661103182488C8ADE76EA02DF0"
+    yandex = "41d8a99d172f9fff"
