--- a/config.ini
+++ b/config.ini
@@ -5,9 +5,12 @@
     nick = "sandokan.cat"
     user = "sandokanCat"
     name = "Gonzalo Cabezas Núñez"
+    tel = "+34631306583"
+    discord = "1102642624671797328"
     region = "ES-B"
     city = "Barcelona"
     postal = "08014"
+
 
 [lang]
 
@@ -33,6 +36,7 @@
     rtl[] = "bal"
     rtl[] = "nqo"
 
+
 [path]
 
     open_utils = "https://open-utils-dev-sandokan-cat.vercel.app"
@@ -43,6 +47,7 @@
     social[infojobs] = "https://infojobs.net/candidate/cv/view/index.xhtml?dgv=3099151168547844805"
 
     cookies = "https://wikipedia.org/"
+
 
 [knows]
 
@@ -56,14 +61,16 @@
     know[] = "MySQL"
     know[] = "Java"
 
+
 [academy]
 
     name = "Institució Pau Casals"
     url = "https://paucasals.com"
     logo = "https://www.paucasals.com/imagen/logo_640.png"
 
-[agent]
 
-    google = "09e253fadebfd609"
-    bing = "67F856661103182488C8ADE76EA02DF0"
-    yandex = "41d8a99d172f9fff"
+[agents]
+
+    agent[google_site_verification] = "09e253fadebfd609"
+    agent[msvalidate.01] = "67F856661103182488C8ADE76EA02DF0"
+    agent[yandex_verification] = "41d8a99d172f9fff"
