fixing more bugs

--- a/config.ini
+++ b/config.ini
@@ -6,71 +6,79 @@
     user = "sandokanCat"
     name = "Gonzalo Cabezas Núñez"
     tel = "+34631306583"
-    discord = "1102642624671797328"
     region = "ES-B"
     city = "Barcelona"
     postal = "08014"
 
 
-[lang]
-
-    op[ca_ES] = "Català"
-    op[es_ES] = "Español"
-    op[en_GB] = "English"
-    op[ru_RU] = "Русский"
-    op[ar_SA] = "العربية"
-
-    inCase = "en-GB"
-
-    rtl[] = "ar"
-    rtl[] = "he"
-    rtl[] = "fa"
-    rtl[] = "ur"
-    rtl[] = "ps"
-    rtl[] = "sd"
-    rtl[] = "ug"
-    rtl[] = "yi"
-    rtl[] = "dv"
-    rtl[] = "ku"
-    rtl[] = "syr"
-    rtl[] = "bal"
-    rtl[] = "nqo"
-
-
 [path]
 
-    open_utils = "https://open-utils-dev-sandokan-cat.vercel.app"
+    open-utils = "https://open-utils-dev-sandokan-cat.vercel.app"
 
     social[github] = "https://github.com/sandokanCat"
-    social[vercel] = "https://vercel.com/sandokancat"
+    social[vercel] = "https://vercel.com/dev-sandokan-cat"
     social[linkedin] = "https://linkedin.com/in/sandokanCat"
+    social[discord] = "https://discord.com/users/1102642624671797328"
     social[infojobs] = "https://infojobs.net/candidate/cv/view/index.xhtml?dgv=3099151168547844805"
 
     cookies = "https://wikipedia.org/"
 
 
-[knows]
+[tech]
 
-    know[] = "XML"
-    know[] = "HTML5"
-    know[] = "CSS3"
-    know[] = "Vanilla JavaScript"
-    know[] = "JSON"
-    know[] = "AJAX"
-    know[] = "PHP"
-    know[] = "MySQL"
-    know[] = "Java"
+    languages[] = "HTML5"
+    languages[] = "CSS3"
+    languages[] = "Vanilla JavaScript"
+    languages[] = "JSON"
+    languages[] = "AJAX"
+    languages[] = "PHP"
+    languages[] = "MySQL"
+    languages[] = "MariaDB"
+    languages[] = "XML"
+    languages[] = "XHTML"
+    languages[] = "Java"
+    languages[] = "JSP"
+    languages[] = "Python"
+    languages[] = "C"
+
+    tools[] = "Responsive Web Design"
+    tools[] = "Web Accessibility"
+    tools[] = "SEO"
+    tools[] = "Web Publishing"
+    tools[] = "GitHub"
+    tools[] = "Markdown"
+    tools[] = "WordPress"
+
+    systems[] = "Cybersecurity"
+    systems[] = "Bash / Shell"
+    systems[] = "Linux"
 
 
 [academy]
 
-    name = "Institució Pau Casals"
-    url = "https://paucasals.com"
-    logo = "https://www.paucasals.com/imagen/logo_640.png"
+    cybersec[name] = "Formación Tajamar"
+    cybersec[url] = "https://formacion.tajamar.es/"
+    cybersec[logo] = "https://formacion.tajamar.es/img/tienda-tajamar-logo-1544014002.jpg"
+    
+    backend[name] = "Institució Pau Casals"
+    backend[url] = "https://paucasals.com/"
+    backend[logo] = "https://www.paucasals.com/imagen/logo_640.png"
+
+    frontend[name] = "ADAMS Formación"
+    frontend[url] = "https://www.adams.es/"
+    frontend[logo] = "https://www.adams.es/wp-content/uploads/2021/09/cropped-logo.png"
+
+    university[name] = "Universidad Nacional de Educación a Distancia (UNED)"
+    university[url] = "https://www.uned.es/universidad/inicio/"
+    university[logo] = "https://www.uned.es/universidad/.imaging/mte/home-nueva-theme/120/dam/recursos-corporativos/logotipos/genericos/Logo-UNED-30x30_Color.png/jcr:content/Logo-UNED-bajares.png"
+
+    highschool[name] = "IES Joan Coromines"
+    highschool[url] = "https://agora.xtec.cat/ies-joan-coromines/"
+    highschool[logo] = "https://agora.xtec.cat/ies-joan-coromines/wp-content/uploads/usu1943/2019/10/2.Logo_versi%C3%B3-principal_GROC-V.png"
 
 
-[agents]
+[verification]
 
-    agent[google_site_verification] = "09e253fadebfd609"
-    agent[msvalidate.01] = "67F856661103182488C8ADE76EA02DF0"
-    agent[yandex_verification] = "41d8a99d172f9fff"
+    google = "09e253fadebfd609"
+    bing = "67F856661103182488C8ADE76EA02DF0"
+    yandex = "41d8a99d172f9fff"
