refactoring meta tags

--- a/config.ini
+++ b/config.ini
@@ -79,6 +79,6 @@
 
 [verification]
 
-    google = "09e253fadebfd609"
-    bing = "67F856661103182488C8ADE76EA02DF0"
-    yandex = "41d8a99d172f9fff"
+    google[google-site-verification] = "09e253fadebfd609"
+    bing[msvalidate.01] = "67F856661103182488C8ADE76EA02DF0"
+    yandex[yandex-verification] = "41d8a99d172f9fff"
