--- a/config.ini
+++ b/config.ini
@@ -21,8 +21,6 @@
     social[discord] = "https://discord.com/users/1102642624671797328"
     social[infojobs] = "https://infojobs.net/candidate/cv/view/index.xhtml?dgv=3099151168547844805"
 
-    cookies = "https://wikipedia.org/"
-
 
 [tech]
 
@@ -50,6 +48,7 @@
     tools[] = "WordPress"
 
     systems[] = "Cybersecurity"
+    systems[] = "Blockchain"
     systems[] = "Bash / Shell"
     systems[] = "Linux"
 
@@ -66,9 +65,9 @@
 
     frontend[name] = "ADAMS Formación"
     frontend[url] = "https://www.adams.es/"
-    frontend[logo] = "https://www.adams.es/wp-content/uploads/2021/09/cropped-logo.png"
+    frontend[logo] = "https://www.adams.es/api/media/2025/03/logo.svg"
 
-    university[name] = "Universidad Nacional de Educación a Distancia (UNED)"
+    university[name] = "Universidad Nacional de Educación a Distancia"
     university[url] = "https://www.uned.es/universidad/inicio/"
     university[logo] = "https://www.uned.es/universidad/.imaging/mte/home-nueva-theme/120/dam/recursos-corporativos/logotipos/genericos/Logo-UNED-30x30_Color.png/jcr:content/Logo-UNED-bajares.png"
 
