--- a/.gitmodules
+++ b/.gitmodules
@@ -1,25 +1,23 @@
-# ADD OPEN-UTILS REPO AS SUBMODULE
-[submodule "open-utils"]
-    path = public/open-utils
-    url = https://github.com/sandokanCat/open-utils
-    branch = main
-    ignore = dirty
-
-# ADD PHPDOTENV REPO AS SUBMODULE
+# ADD EXTERNAL REPOS AS SUBMODULES
 [submodule "PHPdotenv"]
     path = app/PHPdotenv
     url = https://github.com/vlucas/phpdotenv
     branch = master
     ignore = all
 
-# ADD PHPMAILER REPO AS SUBMODULE
 [submodule "PHPMailer"]
     path = app/PHPMailer
     url = https://github.com/PHPMailer/PHPMailer
     brach = master
     ignore = all
 
-# ADD ESTOPA REPO AS SUBMODULE
+# ADD OWN REPOS AS SUBMODULES
+[submodule "open-utils"]
+    path = public/open-utils
+    url = https://github.com/sandokanCat/open-utils
+    branch = main
+    ignore = dirty
+
 [submodule "estopa"]
     path = public/estopa
     url = https://github.com/sandokanCat/estopa
