fixing lang errors

--- a/config.ini
+++ b/config.ini
@@ -51,6 +51,7 @@
     systems[] = "Blockchain"
     systems[] = "Bash / Shell"
     systems[] = "Linux"
+    systems[] = "Apache HTTP Server"
 
 
 [academy]
