fix dynamic translations

--- a/config.ini
+++ b/config.ini
@@ -30,7 +30,7 @@
     languages[] = "JSON"
     languages[] = "AJAX"
     languages[] = "PHP"
-    languages[] = "MySQL"
+    languages[] = "SQL"
     languages[] = "MariaDB"
     languages[] = "XML"
     languages[] = "XHTML"
