--- a/config.ini
+++ b/config.ini
@@ -32,6 +32,7 @@
     languages[] = "PHP"
     languages[] = "SQL"
     languages[] = "MariaDB"
+    languages[] = "JWT"
     languages[] = "XML"
     languages[] = "XHTML"
     languages[] = "Java"
