add PHPMailer as submodule

--- a/config.ini
+++ b/config.ini
@@ -30,6 +30,7 @@
     languages[] = "JSON"
     languages[] = "AJAX"
     languages[] = "PHP"
+    languages[] = "Python"
     languages[] = "SQL"
     languages[] = "MariaDB"
     languages[] = "JWT"
@@ -37,14 +38,13 @@
     languages[] = "XHTML"
     languages[] = "Java"
     languages[] = "JSP"
-    languages[] = "Python"
     languages[] = "C"
 
     tools[] = "Responsive Web Design"
     tools[] = "Web Accessibility"
     tools[] = "SEO"
     tools[] = "Web Publishing"
-    tools[] = "GitHub"
+    tools[] = "Git / GitHub"
     tools[] = "Markdown"
     tools[] = "WordPress"
 
