--- a/config.ini
+++ b/config.ini
@@ -39,6 +39,7 @@
     languages[] = "Java"
     languages[] = "JSP"
     languages[] = "C"
+    languages[] = "Solidity"
 
     tools[] = "Responsive Web Design"
     tools[] = "Web Accessibility"
@@ -57,6 +58,14 @@
 
 [academy]
 
+    blockchain[name] = "Blockchain Accelerator"
+    blockchain[url] = "https://www.blockchainaccelerator.es/"
+    blockchain[logo] = "https://hebbkx1anhila5yf.public.blob.vercel-storage.com/LogoSinFondoCentrando-ksm0olYizV2lNnMBNX2dQHXw1sEbEH.png"
+
+    42bcn[name] = "42 Barcelona"
+    42bcn[url] = "https://www.42barcelona.com/"
+    42bcn[logo] = "https://www.42barcelona.com/wp-content/uploads/2020/07/Barcelona-300x79.png"
+    
     cybersec[name] = "Formación Tajamar"
     cybersec[url] = "https://formacion.tajamar.es/"
     cybersec[logo] = "https://formacion.tajamar.es/img/tienda-tajamar-logo-1544014002.jpg"
